# video_viewer

./: .gitignore  README.md  framesaver.py  frameviewer.py  notes.md  patch_pca.py  player.py  player2.py  pyproject.toml  requirements.txt  utils.py  video_roi_recorder.py  video_roi_recorder2.py  videoplayer.py
archive/: motion_blur.yaml  videoplayer.py
dataset_files/: color_distortion.jsonl  motion_blur.jsonl  motion_blur.yaml  perceptual_temporal_noise.jsonl  texture_loss_dynamic.jsonl  texture_loss_static.jsonl
src/video_viewer/: analysis_platform.py  box.py  channels.py  clickable_label.py  cov_pca.py  distortion.py  file_manager.py  project_model.py  qtroles.py  toolbar.py  video_utils.py  video_viewer.py
src/video_viewer/ml_modules/: mlmodel.py  patch_pca.py  pca_hist.py
