[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_distortion"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "mlflow>=3.1.4",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.3",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]

[tool.setuptools]
packages = ["video_viewer"]

[tool.setuptools.package-dir]
"" = "src"
